<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="352dp"
        android:layout_height="382dp"
        android:background="?attr/colorOnPrimary"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/colon3"
            android:textColor="?attr/colorOnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="122dp"
            android:text=":"
            android:backgroundTint="?attr/colorOnSecondary"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/timer_pop_seconds"
            android:layout_width="93dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginStart="230dp"
            android:layout_marginTop="93dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColorHint="?attr/colorOnSecondary"
            android:hint="00"
            android:backgroundTint="?attr/colorOnSecondary"
            android:inputType="number"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/timer_pop_minutes"
            android:layout_width="93dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="130dp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="92dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColorHint="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorOnSecondary"
            android:hint="00"
            android:inputType="number"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="223dp"
            android:text=":"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/timer_pop_hours"
            android:layout_width="93dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="91dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="00"
            android:backgroundTint="?attr/colorOnSecondary"
            android:inputType="number"
            android:textColorHint="?attr/colorOnSecondary"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/name_text_box"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timer_pop_minutes"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="100dp"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorOnSecondary"
            android:hint="Name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="310dp"
            android:text="Cancel" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="29dp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginBottom="12dp"
            android:text="Add" />

<!--        <TextView-->
<!--            android:id="@+id/preset_message"-->
<!--            android:layout_width="245dp"-->
<!--            android:layout_height="44dp"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginStart="52dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_marginEnd="53dp"-->
<!--            android:text="Create a Timer Preset"-->
<!--            android:textSize="25sp" />-->

        <!--    <ToggleButton-->
        <!--        android:id="@+id/toggleAMPM"-->
        <!--        android:layout_width="80dp"-->
        <!--        android:layout_height="35dp"-->
        <!--        android:layout_below="@+id/minutes"-->
        <!--        android:layout_alignParentStart="true"-->
        <!--        android:layout_alignParentEnd="true"-->
        <!--        android:layout_marginStart="136dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:layout_marginEnd="134dp"-->
        <!--        android:background="@color/button_background"-->
        <!--        android:text="Toggle AM and PM"-->
        <!--        android:textColor="#FFFFFF"-->
        <!--        android:textOff="AM"-->
        <!--        android:textOn="PM" />-->

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>