<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity"
    android:background="?attr/colorPrimary"
    >

    <Button
        android:id="@+id/stopTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetTimer"
        app:layout_constraintStart_toEndOf="@+id/StartTimer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/resetTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
...
        app:layout_constraintVertical_bias="0.346" />

    <Button
        android:id="@+id/StartTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:clickable="true"
...
        android:textColor="?attr/colorOnSecondary"
        android:text="Log Out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/navigation_bar"
            android:layout_width="411dp"
            android:layout_height="56dp"
            android:background="?attr/colorOnPrimary"
            app:tabTextColor="?attr/colorOnSecondary"
            app:tabSelectedTextColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
...
