<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer_item"
    android:layout_width="320dp"
    android:layout_height="66dp"
    android:background="?attr/colorOnPrimary"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/existing_timer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="00:00:00"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/existing_timer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="Timer Name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/existing_timer_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/deletion_button"
        android:layout_width="48dp"
        android:layout_height="67dp"
        android:layout_marginStart="3dp"
        android:clickable="true"
        android:text="X"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>